--- a/backend/my_env/pyvenv.cfg
+++ b/backend/my_env/pyvenv.cfg
@@ -1,5 +1,5 @@
 home = C:\Users\mayll\AppData\Local\Programs\Python\Python313
 include-system-site-packages = false
 version = 3.13.2
-executable = C:\Users\mayll\AppData\Local\Programs\Python\Python313\python.exe
-command = C:\Users\mayll\AppData\Local\Programs\Python\Python313\python.exe -m venv C:\Users\mayll\Desktop\Guarderia-canina\backend\my_env
+executable = C:\Users\mayll\Desktop\Guarderia-canina\backend\my_env\Scripts\python.exe
+command = C:\Users\mayll\Desktop\Guarderia-canina\backend\my_env\Scripts\python.exe -m venv C:\Users\mayll\Desktop\Guarderia-canina\backend\my_env
